--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
   "name": "style-sync",
   "version": "1.2.0",
-  "description": "Your Figma Plugin",
-  "main": "code.js",
+  "author": "Maxime Daraize <hello@maximedaraize.com>",
+  "license": "MIT",
+  "repository": "https://github.com/maximedaraize/style-sync.git",
   "scripts": {
-    "build": "tsc -p tsconfig.json",
-    "watch": "tsc --watch"
-  },
-  "author": "",
-  "license": "",
-  "devDependencies": {
-    "@figma/plugin-typings": "*",
-    "typescript": "*"
+    "dev": "vite",
+    "build": "vue-tsc --noEmit && vite build",
+    "watch": "vue-tsc --noEmit && vite build --watch",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "figma-plugin-ds": "^1.0.1"
+    "figma-plugin-ds": "^1.0.1",
+    "vue": "^3.2.25"
+  },
+  "devDependencies": {
+    "@figma/plugin-typings": "^1.44.0",
+    "@vitejs/plugin-vue": "^2.3.1",
+    "typescript": "^4.5.4",
+    "vite": "^2.9.5",
+    "vite-plugin-singlefile": "0.7.1",
+    "vue-tsc": "^0.34.7"
   }
 }
